--- a/package.json
+++ b/package.json
@@ -34,8 +34,27 @@
     "test:debug": "node debug script/jasmine-runner.js",
     "lint": "eslint src test --ignore-pattern=src/translation/*.js",
     "lint-fix": "eslint --fix src test --ignore-pattern=src/translation/*.js",
-    "validate-manifest": "node script/validate_manifest.js"
+    "validate-manifest": "node script/validate_manifest.js",
+    "size": "bundlesize"
   },
+  "bundlesize": [
+    {
+      "path": "dist/web_widget.*.js",
+      "maxSize": "410 KB"
+    },
+    {
+      "path": "dist/common_vendor.*.js",
+      "maxSize": "100 KB"
+    },
+    {
+      "path": "dist/talk_vendor.*.js",
+      "maxSize": "50 KB"
+    },
+    {
+      "path": "dist/chat_vendor.*.js",
+      "maxSize": "50 KB"
+    }
+  ],
   "author": "Zendesk",
   "license": "All Rights Reserved",
   "dependencies": {
@@ -77,6 +96,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "bundlesize": "^0.17.0",
     "chalk": "^1.1.3",
     "concurrently": "^3.1.0",
     "css-loader": "^0.28.11",
