--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "@zendeskgarden/css-tooltips": "^4.0.1",
     "@zendeskgarden/css-variables": "^4.1.3",
     "@zendeskgarden/react-checkboxes": "^3.2.8",
+    "@zendeskgarden/react-modals": "^5.2.14",
     "@zendeskgarden/react-select": "^2.2.6",
+    "@zendeskgarden/react-selection": "^4.3.1",
     "@zendeskgarden/react-textfields": "^3.2.4",
     "@zendeskgarden/react-theming": "^3.1.0",
     "@zendeskgarden/svg-icons": "~4.0.0",
