--- a/package.json
+++ b/package.json
@@ -54,13 +54,13 @@
     "@zendeskgarden/css-arrows": "^3.1.0",
     "@zendeskgarden/css-bedrock": "^7.0.1",
     "@zendeskgarden/css-buttons": "6.0.0",
-    "@zendeskgarden/css-tooltips": "^4.0.1",
+    "@zendeskgarden/css-tooltips": "^4.0.3",
     "@zendeskgarden/css-variables": "^4.1.3",
-    "@zendeskgarden/react-checkboxes": "^3.2.8",
-    "@zendeskgarden/react-modals": "^5.2.14",
-    "@zendeskgarden/react-select": "^2.2.13",
-    "@zendeskgarden/react-selection": "^4.3.1",
-    "@zendeskgarden/react-textfields": "^3.2.8",
+    "@zendeskgarden/react-checkboxes": "^3.2.10",
+    "@zendeskgarden/react-modals": "^5.2.16",
+    "@zendeskgarden/react-select": "^2.2.18",
+    "@zendeskgarden/react-selection": "^4.3.2",
+    "@zendeskgarden/react-textfields": "^3.2.10",
     "@zendeskgarden/react-theming": "^3.1.1",
     "@zendeskgarden/svg-icons": "~4.0.0",
     "airwaves": "~0.3.0",
@@ -114,7 +114,7 @@
     "imports-loader": "^0.8.0",
     "inline-source": "^4.4.0",
     "jasmine": "^2.8.0",
-    "jasmine-ajax": "git://github.com/pivotal/jasmine-ajax#v2.0.0.rc2",
+    "jasmine-ajax": "git://github.com/pivotal/jasmine-ajax.git#v2.0.0.rc2",
     "jasmine-spec-reporter": "^2.4.0",
     "jsdom": "~7.2.2",
     "json-loader": "^0.5.7",
