--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@zendeskgarden/css-buttons": "6.0.0",
     "@zendeskgarden/css-tooltips": "^4.0.3",
     "@zendeskgarden/css-variables": "^4.1.3",
+    "@zendeskgarden/react-buttons": "^3.4.0",
     "@zendeskgarden/react-checkboxes": "^3.2.10",
     "@zendeskgarden/react-modals": "^5.2.16",
     "@zendeskgarden/react-select": "^2.2.18",
